--- a/package.json
+++ b/package.json
@@ -11,24 +11,28 @@
   "author": "Ivan Novoselov",
   "license": "ISC",
   "eslintConfig": {
-    "extends": ["airbnb-base", "prettier"],
+    "extends": [
+      "airbnb-base",
+      "prettier"
+    ],
     "env": {
       "browser": true
     }
   },
   "dependencies": {
     "config": "^1.26.1",
-    "materialize-css": "^0.100.2"
+    "materialize-css": "^0.100.2",
+    "pug": "^2.0.0-rc.4"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
+    "babel-preset-env": "^1.6.0",
     "babel-preset-es2015": "^6.24.1",
     "eslint": "^4.6.0",
     "eslint-config-airbnb": "^15.1.0",
     "eslint-config-prettier": "^2.4.0",
     "eslint-plugin-import": "^2.7.0",
     "html-webpack-plugin": "^2.30.1",
-    "pug": "^2.0.0-rc.3",
     "pug-loader": "^2.3.0",
     "webpack": "^3.5.5",
     "webpack-dev-server": "^2.7.1"
