--- a/package.json
+++ b/package.json
@@ -22,19 +22,30 @@
   "dependencies": {
     "config": "^1.26.1",
     "materialize-css": "^0.100.2",
-    "pug": "^2.0.0-rc.4"
+    "pug": "^2.0.0-rc.4",
+    "underscore": "^1.8.3"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.0",
     "babel-preset-es2015": "^6.24.1",
-    "eslint": "^4.6.0",
+    "css-loader": "^0.28.7",
+    "eslint": "^4.8.0",
     "eslint-config-airbnb": "^15.1.0",
     "eslint-config-prettier": "^2.4.0",
     "eslint-plugin-import": "^2.7.0",
+    "html-loader": "^0.5.1",
     "html-webpack-plugin": "^2.30.1",
+    "pug-filters": "^2.1.5",
+    "pug-html-loader": "^1.1.5",
     "pug-loader": "^2.3.0",
+    "style-loader": "^0.18.2",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.1",
     "webpack": "^3.5.5",
-    "webpack-dev-server": "^2.7.1"
+    "webpack-dev-server": "^2.7.1",
+    "webpack-obfuscator": "^0.11.2"
   }
 }
